<resources>
    <string name="app_name">ChaseBank</string>
    <string name="emailhint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="remember">Remember Me</string>
    <string name="signinbtn">SIGN IN</string>
    <string name="fgtpwd">Forgot Password?</string>
    <string name="taphere">Tap Here</string>
    <string name="actbr">Action Bar</string>
    <string name="summary">ACCOUNT SUMMARY</string>
    <string name="bal">BALANCE</string>
    <string name="paym">MAKE PAYMENTS</string>
    <string name="shop">SHOP NOW</string>
    <string name="mov">MOVIE</string>
    <string name="card">MY CARDS</string>
    <string name="trans">TRANSACTION HIST.</string>
    <string name="bills">PAY BILLS</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Savings/Investment</string>
    <string name="slide_1_desc">Keep track of your spending and make wise investment decisions</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Get best discounts when you shop</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets for any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
